2003-03-11 Blake Winston (with some followup from Will Guaraldi)
        * Introduced the EntryBase API and adjusted the code base so that
	  content can be dynamically created from whatever is handling
	  the URL.

2003-03-01 Will Guaraldi <willg@bluesock.org>
	* Changes initialize_plugins(...) to load plugins listed in
	  the "load_plugins" key in the config file.  If no "load_plugins"
	  key is set, then we don't load any plugins.  We load plugins
	  in the order of the "load_plugins" list.

2003-02-16 Wari Wahab <pyblosxom@wari.per.sg>
	* Pyblosxom core rendering code can now use seperate renderers
	  defined by the user. This means that if a user wants to use other
	  templating system, it possible now. Possibilities includes renderers
	  using Cheetah, Albatross, empy templating system, or even
	  HTML Template that most perl users have known and love. Right now,
	  included renderers are the blosxom templating system and a debug
	  renderer
	* Updated most plugins to include renderers in their load mechanism so
	  that they can use it if needed.

2003-02-11 Wari Wahab <pyblosxom@wari.per.sg>
	* Config.py no longer used an INI file, this will load faster than
	  having an INI file to parse
	* Updated config.py with values that reflect the current pyblosxom CVS
	  state.
	* py['tb_data'] no longer a default value in pyblosxom.py
	* Added a contrib/entryparsers/ directory and basically store what we
	  can handle over there. Users get a standard txt.py entryparser as
	  default
	* Added a modified version of autoping code from Sam Ruby that's cache
	  and entryparsers compliant. Sadly you need to modify one line in the
	  code that states where you you installed pyblosxom (This is not in
	  config)

2003-02-10 Wari Wahab <pyblosxom@wari.per.sg>
	* Added ability for pyblosxom to read entries of different extensions,
	  given a proper extension driver, this means that if you associate
	  .doc files as word documents, and you have libs.entryparsers.doc.py